[package]
name = "gbrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = { version = "2.2.0", default-features = false, features = [
    "colors",
] }
egui = "0.18.1"
eframe = "0.18.0"
